<resources>
    <string name="app_name">CaddyRating</string>
    <string name="title_first">HOME</string>
    <string name="title_name_mypage">マイページ</string>
    <string name="title_send_opinion">ご意見送信画面</string>
    <string name="title_send_complete">送信完了画面</string>
    <string name="title_evaluationInput">評価入力画面</string>
    <string name="title_evaluationInputFromGolfer">ゴルファー評価入力画面</string>

    <string name="subtitle_evaluation_golf_place">ゴルフ場への評価</string>
    <string name="subtitle_evaluation_golfer">ゴルファーへの評価</string>
    <string name="subtitle_evaluation_cady">キャディへの評価</string>

    <string name="button_logout">ログアウト</string>
    <string name="button_opinions_golf_course">ゴルフ場へのご意見</string>
    <string name="button_back">BACK</string>
    <string name="button_to_my_page">マイページへ</string>
    <string name="button_send_my_page">送信しマイページへ</string>
    <string name="button_cady">キャディ</string>
    <string name="button_golfer">ゴルファー</string>
    <string name="button_golf_place">ゴルフ場関係者</string>
    <string name="button_home">HOME(開発用)</string>

    <string name="text_name">名前</string>
    <string name="display_caddy_name">キャディ　たぬき</string>
    <string name="text_birthday">生年月日</string>
    <string name="display_birthday">1990/10/13</string>
    <string name="text_workable_area">勤務可能なエリア</string>
    <string name="display_workable_area">千葉県</string>
    <string name="text_evaluation_item1">評価項目1</string>
    <string name="text_evaluation_item2">評価項目2</string>
    <string name="display_evaluation_item1">⭐️⭐️⭐️⭐️⭐️</string>
    <string name="display_evaluation_item2">⭐️⭐️⭐️</string>
    <string name="text_evaluation_average">評価平均</string>
    <string name="display_evaluation_average">⭐️⭐️⭐️⭐️</string>
    <string name="text_rank">ランク</string>
    <string name="display_rank">A</string>
    <string name="button_send_opinion">送信</string>
    <string name="text_opinion">ご意見</string>
    <string name="edit_opinion">こちらにご自由にご意見をどうぞ</string>
    <string name="text_send_day">送信年月日</string>
    <string name="text_inputday">入力年月日</string>
    <string name="text_workingDay">出勤日</string>
    <string name="text_playingDay">プレー日</string>
    <string name="text_evaluation_golfer_A">ゴルファーAの評価</string>
    <string name="text_evaluation_golfer_B">ゴルファーBの評価</string>
    <string name="text_evaluation_golfer_C">ゴルファーCの評価</string>
    <string name="text_evaluation_golfer_D">ゴルファーDの評価</string>
    <string name="text_cady_evaluation_item1">キャディ評価項目1</string>
    <string name="text_cady_evaluation_item2">キャディ評価項目2</string>
    <string name="text_cady_evaluation_item3">キャディ評価項目3</string>
    <string name="text_cady_evaluation_item4">キャディ評価項目4</string>
    <string name="display_evaluation_golfer_A">⭐️⭐️⭐️⭐️⭐</string>
    <string name="display_evaluation_golfer_B">⭐</string>
    <string name="display_evaluation_golfer_C">⭐️⭐️⭐️⭐️</string>
    <string name="display_evaluation_golfer_D">⭐️⭐️⭐</string>


</resources>