<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title_evaluationInputFromGolfer"
        android:layout_width="340dp"
        android:layout_height="39dp"
        android:layout_centerInParent="true"
        android:text="@string/title_evaluationInputFromGolfer"
        android:textAlignment="center"
        android:textColor="#001D74"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />
    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        app:layout_constraintTop_toBottomOf="@+id/title_evaluationInputFromGolfer"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_caddy_name"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_name"
        />

    <TextView
        android:id="@+id/text_inputday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_inputday"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"/>

    <EditText
        android:id="@+id/inputday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2020/02/02"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_inputday"
        />

    <TextView
        android:id="@+id/text_workingDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/text_playingDay"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/inputday"/>

    <EditText
        android:id="@+id/workingDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="2020/02/01"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_workingDay"
        />
    <TextView
        android:id="@+id/subtitle_evaluation_golf_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/subtitle_evaluation_golf_place"
        android:textSize="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workingDay"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_evaluation_item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_evaluation_item1"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_evaluation_golf_place"/>

    <TextView
        android:id="@+id/evaluation_item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_evaluation_item1"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_evaluation_item1"
        />

    <TextView
        android:id="@+id/text_evaluation_item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_evaluation_item2"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_evaluation_item1"/>

    <TextView
        android:id="@+id/evaluation_item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_evaluation_item2"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_evaluation_item2"
        />
    <TextView
        android:id="@+id/subtitle_evaluation_golfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle_evaluation_cady"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evaluation_item2"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/text_evaluation_golfer_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cady_evaluation_item1"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/subtitle_evaluation_golfer"
        tools:layout_editor_absoluteY="331dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/evaluation_golfer_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_evaluation_golfer_A"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_evaluation_golfer_A"
        />

    <TextView
        android:id="@+id/text_evaluation_golfer_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cady_evaluation_item2"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_evaluation_golfer_A"
        tools:layout_editor_absoluteY="331dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/evaluation_golfer_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_evaluation_golfer_B"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_evaluation_golfer_B"
        />
    <TextView
        android:id="@+id/text_evaluation_golfer_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cady_evaluation_item3"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_evaluation_golfer_B"
        tools:layout_editor_absoluteY="331dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/evaluation_golfer_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_evaluation_golfer_C"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_evaluation_golfer_C"
        />
    <TextView
        android:id="@+id/text_evaluation_golfer_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_cady_evaluation_item4"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_evaluation_golfer_C"
        tools:layout_editor_absoluteY="331dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/evaluation_golfer_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_evaluation_golfer_D"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_evaluation_golfer_D"
        />

    <Button
        android:id="@+id/button_toMypage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send_my_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        />


    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_home"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>