<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SendOpinionFragment">

    <TextView
        android:id="@+id/title_mypage"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:text="@string/title_send_complete"
        android:textAlignment="center"
        android:textColor="#001D74"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="230dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/title_mypage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/opinion_box" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="40dp"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_caddy_name"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_name"
        />

    <TextView
        android:id="@+id/text_sendDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_send_day"
        app:layout_constraintLeft_toLeftOf="@+id/text_name"
        app:layout_constraintTop_toBottomOf="@+id/text_name"/>

    <TextView
        android:id="@+id/sendday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_birthday"
        android:layout_marginEnd="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_sendDay"
        />

    <TextView
        android:id="@+id/text_opinion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_opinion"
        app:layout_constraintTop_toBottomOf="@id/sendday"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_opinion"
        />

    <TextView
        android:id="@+id/edit_opinion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_opinion"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sendOpinionButton"
    />

    <Button
        android:id="@+id/button_toMypage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_to_my_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        />
    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="@string/button_back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.843"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>