<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SendOpinionFragment">

    <TextView
        android:id="@+id/title_first"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:text="@string/title_first"
        android:textAlignment="center"
        android:textColor="#001D74"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="230dp"
        android:layout_height="80dp"
        app:layout_constraintTop_toBottomOf="@+id/title_first"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/tanukigolf" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
        <Button
            android:id="@+id/button_cady"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cady"/>
        <Button
            android:id="@+id/button_golfer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_golfer"/>
        <Button
            android:id="@+id/button_golf_place"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_golf_place"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>